--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,7 +11,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/node": "^14.14.36",
-		"commander": "^7.2.0"
+		"commander": "^7.2.0",
+		"local-api": "^1.0.0"
 	},
 	"devDependencies": {
 		"typescript": "^4.2.3"
