--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -12,7 +12,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/node": "^14.14.36"
+		"@types/cors": "^2.8.10",
+		"@types/express": "^4.17.11",
+		"@types/node": "^14.14.36",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"http-proxy-middleware": "^1.0.6"
 	},
 	"devDependencies": {
 		"typescript": "^4.2.3"
