--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -17,7 +17,8 @@
 		"@types/node": "^14.14.36",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"http-proxy-middleware": "^1.0.6"
+		"http-proxy-middleware": "^1.0.6",
+		"local-client": "^0.1.0"
 	},
 	"devDependencies": {
 		"typescript": "^4.2.3"
