--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ build/Release
 
 # Dependency directories
 node_modules/
+dist/
+build/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
