--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,20 +1,29 @@
 {
-	"name": "cli",
+	"name": "js-note",
 	"version": "1.0.0",
 	"description": "",
+	"publishConfig": {
+		"access": "public"
+	},
+	"bin": "dist/index.js",
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"start": "tsc --watch --preserveWatchOutput",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"prepublishOnly": "esbuild index.ts --platform=node --outfile=dist/index.js --bundle --minify --define:process.env.NODE_ENV=\\\"production\\\""
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/node": "^14.14.36",
-		"commander": "^7.2.0",
-		"local-api": "^1.0.0"
+		"@notejs/local-client": "^1.0.0"
 	},
 	"devDependencies": {
-		"typescript": "^4.2.3"
+		"@types/node": "^14.14.36",
+		"esbuild": "^0.10.2",
+		"typescript": "^4.2.3",
+		"@notejs/local-api": "^1.0.0",
+		"commander": "^7.2.0"
 	}
 }
