--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -1,26 +1,32 @@
 {
-	"name": "local-api",
+	"name": "@notejs/local-api",
 	"version": "1.0.0",
 	"description": "",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"publishConfig": {
+		"access": "public"
+	},
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"start": "tsc --watch --preserveWatchOutput",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"prepublishOnly": "tsc"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/cors": "^2.8.10",
-		"@types/express": "^4.17.11",
-		"@types/node": "^14.14.36",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"http-proxy-middleware": "^1.0.6",
-		"local-client": "^0.1.0"
+		"@notejs/local-client": "^0.1.0"
 	},
 	"devDependencies": {
-		"typescript": "^4.2.3"
+		"typescript": "^4.2.3",
+		"@types/cors": "^2.8.10",
+		"@types/express": "^4.17.11",
+		"@types/node": "^14.14.36"
 	}
 }
