--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,10 +20,10 @@
 		"@notejs/local-client": "^1.0.0"
 	},
 	"devDependencies": {
-		"@types/node": "^14.14.36",
-		"esbuild": "^0.10.2",
-		"typescript": "^4.2.3",
 		"@notejs/local-api": "^1.0.0",
-		"commander": "^7.2.0"
+		"@types/node": "^14.14.36",
+		"commander": "^7.2.0",
+		"esbuild": "^0.10.2",
+		"typescript": "^4.2.3"
 	}
 }
