--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -18,15 +18,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@notejs/local-client": "^1.0.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"http-proxy-middleware": "^1.0.6",
-		"@notejs/local-client": "^0.1.0"
+		"http-proxy-middleware": "^1.0.6"
 	},
 	"devDependencies": {
-		"typescript": "^4.2.3",
 		"@types/cors": "^2.8.10",
 		"@types/express": "^4.17.11",
-		"@types/node": "^14.14.36"
+		"@types/node": "^14.14.36",
+		"typescript": "^4.2.3"
 	}
 }
