--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@notejs/local-api",
-	"version": "1.0.1",
+	"version": "1.0.5",
 	"description": "",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -18,7 +18,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@notejs/local-client": "^1.0.1",
+		"@notejs/local-client": "^1.0.5",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"http-proxy-middleware": "^1.0.6"
@@ -28,5 +28,6 @@
 		"@types/express": "^4.17.11",
 		"@types/node": "^14.14.36",
 		"typescript": "^4.2.3"
-	}
+	},
+	"gitHead": "b3f36c8fd5f0197824258edb9e75a86de594cb05"
 }
